--- a/app/src/main/res/drawable/style_borde_textview.xml
+++ b/app/src/main/res/drawable/style_borde_textview.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1sp"
-        android:color="@color/black"/>
+        android:color="@color/marron_letra_rv"/>
 
     <padding
         android:bottom="10sp"
