--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/fondo_app">
 
     <TextView
         android:id="@+id/tvTituloApp"
@@ -20,7 +21,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:background="@color/purple_app"
+        android:background="@color/marron_letra_rv"
         />
 
     <androidx.appcompat.widget.SearchView
@@ -70,7 +71,7 @@
         android:layout_margin="32dp"
         android:src="@android:drawable/ic_input_add"
         android:contentDescription="Añade un juego"
-        app:backgroundTint="@color/purple_app"
+        app:backgroundTint="@color/marron_letra_rv"
         app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent
