--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="marron_letra_rv">#914933</color>
     <color name="fondo_app">#F0E7D7</color>
     <color name="estrellas">#FF9800</color>
+    <color name="app_ui">#CCA36B</color>
 </resources>
