--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:background="@color/marron_letra_rv"
+        android:background="@color/app_ui"
         />
 
     <androidx.appcompat.widget.SearchView
@@ -71,7 +71,7 @@
         android:layout_margin="32dp"
         android:src="@android:drawable/ic_input_add"
         android:contentDescription="Añade un juego"
-        app:backgroundTint="@color/marron_letra_rv"
+        app:backgroundTint="@color/app_ui"
         app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent
