--- a/app/src/main/res/layout/dialog_libro.xml
+++ b/app/src/main/res/layout/dialog_libro.xml
@@ -126,6 +126,24 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/contenedorPaginasLeidas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPaginasLeidas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:inputType="number"
+                android:hint="@string/paginasLeidas"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/contenedorImagen"
         android:layout_width="match_parent"
