--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="fondo_app">#F0E7D7</color>
     <color name="estrellas">#FF9800</color>
     <color name="app_ui">#CCA36B</color>
+    <color name="circle">#497576</color>
 </resources>
