--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,6 +31,16 @@
             android:layout_weight="1" />
 
         <ImageView
+            android:id="@+id/ivEditLibro"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginRight="5dp"
+
+            android:src="@drawable/icons8_editar"/>
+
+        <ImageView
             android:id="@+id/ivBasura"
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -61,7 +71,7 @@
         android:id="@+id/cvIvImagen"
         android:layout_width="150dp"
         android:layout_height="250dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintTop_toBottomOf="@id/llBtn"
@@ -79,7 +89,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="25dp"
 
         android:text="Titulo: "
@@ -93,57 +103,112 @@
         android:id="@+id/tvAutor"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="7dp"
         android:layout_marginLeft="25dp"
         android:textStyle="bold"
         android:text="Autor: "
         android:textColor="@color/marron_letra_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cvIvImagen"
-        app:layout_constraintTop_toTopOf="@+id/tvTitulo" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />
 
     <TextView
         android:id="@+id/tvCategoria"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="7dp"
         android:layout_marginLeft="25dp"
         android:textStyle="bold"
         android:text="Categoria: "
         android:textColor="@color/marron_letra_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cvIvImagen"
-        app:layout_constraintTop_toTopOf="@+id/tvAutor" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAutor" />
 
     <TextView
         android:id="@+id/tvEditorial"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="7dp"
         android:layout_marginLeft="25dp"
         android:textStyle="bold"
         android:text="Editorial: "
         android:textColor="@color/marron_letra_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cvIvImagen"
-        app:layout_constraintTop_toTopOf="@+id/tvCategoria" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />
 
     <TextView
         android:id="@+id/tvPaginas"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="7dp"
         android:layout_marginLeft="25dp"
         android:textStyle="bold"
         android:text="Paginas: "
         android:textColor="@color/marron_letra_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cvIvImagen"
-        app:layout_constraintTop_toTopOf="@+id/tvEditorial" />
+        app:layout_constraintTop_toBottomOf="@+id/tvEditorial" />
+
+    <TextView
+        android:id="@+id/tvPaginasLeidas"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:layout_marginLeft="25dp"
+        android:textStyle="bold"
+        android:text="Paginas leidas: "
+        android:textColor="@color/marron_letra_rv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cvIvImagen"
+        app:layout_constraintTop_toBottomOf="@+id/tvPaginas" />
+
+    <TextView
+        android:id="@+id/tvProgreso"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="14dp"
+        android:textStyle="bold"
+        android:text="Progreso: "
+        android:textColor="@color/marron_letra_rv"
+        app:layout_constraintStart_toEndOf="@+id/cvIvImagen"
+        app:layout_constraintTop_toBottomOf="@+id/tvPaginasLeidas" />
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="90dp"
+        android:indeterminateOnly="false"
+        android:progressDrawable="@drawable/progress_cicrcle"
+        app:layout_constraintTop_toBottomOf="@+id/tvPaginasLeidas"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:progress="40"/>
+
+        <TextView
+            android:id="@+id/tvTextProgreso"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="40%"
+            android:textColor="@color/marron_letra_rv"
+            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+            app:layout_constraintTop_toTopOf="@+id/progressBar"
+            app:layout_constraintStart_toStartOf="@id/progressBar"
+            app:layout_constraintEnd_toEndOf="@id/progressBar"
+
+
+            />
+
+
+
 
     <TextView
         android:id="@+id/tvResena"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="20dp"
@@ -151,19 +216,30 @@
         android:textStyle="bold"
         android:textColor="@color/marron_letra_rv"
         app:layout_constraintTop_toBottomOf="@+id/cvIvImagen"
-        app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/ivEditResena"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="35dp"
+        android:src="@drawable/editdocument_105148"
+        app:layout_constraintBottom_toTopOf="@+id/tvCampoResena"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <TextView
         android:id="@+id/tvCampoResena"
         android:layout_width="350dp"
         android:layout_height="200dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/style_borde_textview"
-        app:layout_constraintTop_toBottomOf="@+id/tvResena"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvResena" />
 
     <RatingBar
         android:id="@+id/rbEstrellas"
